--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -24,13 +24,16 @@
     - name: Install clickhouse packages
       become: true
       ansible.builtin.apt:
-        name:
-          - clickhouse-common-static-{{ clickhouse_version }}.deb
-          - clickhouse-client-{{ clickhouse_version }}.deb
-          - clickhouse-server-{{ clickhouse_version }}.deb
+        deb: "{{ item }}"
+        state: present
+      loop:
+        - clickhouse-common-static-{{ clickhouse_version }}.deb
+        - clickhouse-client-{{ clickhouse_version }}.deb
+        - clickhouse-server-{{ clickhouse_version }}.deb
       notify: Start clickhouse service
     - name: Create database
       ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
       register: create_db
       failed_when: create_db.rc != 0 and create_db.rc !=82
       changed_when: create_db.rc == 0
+      
