changes! I made changes!

--- a/playbook/group_vars/clickhouse/vars.yml
+++ b/playbook/group_vars/clickhouse/vars.yml
@@ -4,3 +4,5 @@ clickhouse_packages:
   - clickhouse-client
   - clickhouse-server
   - clickhouse-common-static
+# vector_url: "https://packages.timber.io/vector/0.22.1/vector_0.22.1-1_amd64.deb"
+vector_url: "https://packages.timber.io/vector/0.22.1/vector-0.22.1-x86_64-unknown-linux-musl.tar.gz"
