--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -1,12 +1,12 @@
 ---
 - name: Install Clickhouse
   hosts: clickhouse
-  handlers:
-    - name: Start clickhouse service
-      become: true
-      ansible.builtin.service:
-        name: clickhouse-server
-        state: restarted
+  # handlers:
+  #   - name: restart_clickhouse
+  #     become: true
+  #     ansible.builtin.service:
+  #       name: clickhouse-server
+  #       state: restarted
   tasks:
     - block:
       - name: Get clickhouse distrib
@@ -30,10 +30,44 @@
         - clickhouse-common-static-{{ clickhouse_version }}.deb
         - clickhouse-client-{{ clickhouse_version }}.deb
         - clickhouse-server-{{ clickhouse_version }}.deb
-      notify: Start clickhouse service
+      # notify: restart_clickhouse
+    - name: Start clickhouse service
+      become: true
+      ansible.builtin.service:
+        name: clickhouse-server
+        state: restarted    
     - name: Create database
       ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
       register: create_db
       failed_when: create_db.rc != 0 and create_db.rc !=82
       changed_when: create_db.rc == 0
       
+- name: Install vector
+  hosts: vector
+  # handlers:
+  #   - name: Start clickhouse service
+  #     become: true
+  #     ansible.builtin.service:
+  #       name: clickhouse-server
+  #       state: restarted
+  tasks:
+    - name: Create vector directory
+      file:
+        path: /vector
+        state: directory
+    - name: Download archive fiile
+      get_url:
+        url: "{{ vector_url }}"
+        dest: /vector.tar.gz
+        mode: '0440'
+    - name: Unpack Vector to local directory
+      ansible.builtin.unarchive:
+        src: /vector.tar.gz
+        dest: /vector
+        remote_src: yes    
+
+    # - name: Unarchive a file that needs to be downloaded (added in 2.0)
+    #   ansible.builtin.unarchive:
+    #     src: {{ vector_url }}
+    #     dest: /vector
+    #     remote_src: yes
