--- a/playbook/inventory/prod.yml
+++ b/playbook/inventory/prod.yml
@@ -2,8 +2,10 @@
 clickhouse:
   hosts:
     clickhouse-01:
-      ansible_host: 192.168.56.101
+      # ansible_host: 192.168.56.101
+      ansible_host: 192.168.1.123
 vector:
   hosts:
     vector-01:
-      ansible_host: 192.168.56.101
+      # ansible_host: 192.168.56.101
+      ansible_host: 192.168.1.123
